crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script_multiple_compilers@unix.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

PYTHON_ARG=
if [ -x "$PYTHON" ]; then
    PYTHON_ARG=-DPython_EXECUTABLE="$PYTHON"
fi
mkdir -p build
pushd build

if [ ! -f "build.ninja" ]; then
    cat > conda-toolchain.cmake <<'EOF'
# Generated by pixi-build-cmake: the compilers of the build environment.
if(NOT "$ENV{CC}" STREQUAL "")
set(CMAKE_C_COMPILER "$ENV{CC}")
endif()
if(NOT "$ENV{CXX}" STREQUAL "")
set(CMAKE_CXX_COMPILER "$ENV{CXX}")
endif()
if(NOT "$ENV{FC}" STREQUAL "")
set(CMAKE_Fortran_COMPILER "$ENV{FC}")
endif()
if(NOT "$ENV{CUDACXX}" STREQUAL "")
set(CMAKE_CUDA_COMPILER "$ENV{CUDACXX}")
endif()
EOF
    cmake $CMAKE_ARGS \
        -DCMAKE_TOOLCHAIN_FILE="$(pwd)/conda-toolchain.cmake" \
        -GNinja \
        -S "my-prefix-dir" \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX="$PREFIX" \
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
        -DBUILD_SHARED_LIBS=ON \
        ${PYTHON_ARG:+"$PYTHON_ARG"}
fi

cmake --build . --target install
