crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script_multiple_compilers@windows.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

set PYTHON_ARG=
if exist "%PYTHON%" set PYTHON_ARG=-DPython_EXECUTABLE="%PYTHON%"
if not exist build mkdir build
pushd build

if not exist build.ninja (
    >conda-toolchain.cmake echo # Generated by pixi-build-cmake: the compilers of the build environment.
    >>conda-toolchain.cmake echo if^(NOT "$ENV{CC}" STREQUAL ""^)
    >>conda-toolchain.cmake echo set^(CMAKE_C_COMPILER "$ENV{CC}"^)
    >>conda-toolchain.cmake echo endif^(^)
    >>conda-toolchain.cmake echo if^(NOT "$ENV{CXX}" STREQUAL ""^)
    >>conda-toolchain.cmake echo set^(CMAKE_CXX_COMPILER "$ENV{CXX}"^)
    >>conda-toolchain.cmake echo endif^(^)
    >>conda-toolchain.cmake echo if^(NOT "$ENV{FC}" STREQUAL ""^)
    >>conda-toolchain.cmake echo set^(CMAKE_Fortran_COMPILER "$ENV{FC}"^)
    >>conda-toolchain.cmake echo endif^(^)
    >>conda-toolchain.cmake echo if^(NOT "$ENV{CUDACXX}" STREQUAL ""^)
    >>conda-toolchain.cmake echo set^(CMAKE_CUDA_COMPILER "$ENV{CUDACXX}"^)
    >>conda-toolchain.cmake echo endif^(^)
    cmake %CMAKE_ARGS% ^
        -DCMAKE_TOOLCHAIN_FILE="%CD%\conda-toolchain.cmake" ^
        -GNinja ^
        -S "my-prefix-dir" ^
        -DCMAKE_BUILD_TYPE=Release ^
        -DCMAKE_INSTALL_PREFIX="%LIBRARY_PREFIX%" ^
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ^
        -DBUILD_SHARED_LIBS=ON ^
        %PYTHON_ARG%
    @if errorlevel 1 exit 1
)

cmake --build . --target install
@if errorlevel 1 exit 1
