crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script_sccache@windows.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version
SET SCCACHE_BASEDIRS="my-prefix-dir"

if not exist build mkdir build
pushd build

if not exist build.ninja (
    cmake %CMAKE_ARGS% ^
        -GNinja ^
        -S "my-prefix-dir" ^
        -DCMAKE_BUILD_TYPE=Release ^
        -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ^
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ^
        -DBUILD_SHARED_LIBS=ON ^
        -DCMAKE_C_COMPILER_LAUNCHER=sccache ^
        -DCMAKE_CXX_COMPILER_LAUNCHER=sccache
    @if errorlevel 1 exit 1
)

cmake --build . --target install
@if errorlevel 1 exit 1



sccache --show-stats
