crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__toolchain_file_guards_every_compiler.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: "lines.join(\"\\n\")"
---
# Generated by pixi-build-cmake: the compilers of the build environment.
if(NOT "$ENV{CC}" STREQUAL "")
set(CMAKE_C_COMPILER "$ENV{CC}")
endif()
if(NOT "$ENV{CXX}" STREQUAL "")
set(CMAKE_CXX_COMPILER "$ENV{CXX}")
endif()
